Adjust the layout to remove unnecessary spacing for a more compact and balanced appearance. and added search filters for both tables

--- a/assets/sass/style.scss
+++ b/assets/sass/style.scss
@@ -665,7 +665,7 @@ footer {
 }
 
 section.events {
-  min-height: 100vh;
+  // min-height: 100vh;
   display: flex;
   justify-content: center;
   align-items: center;
