--- a/themes/django20/layouts/partials/events_map.html
+++ b/themes/django20/layouts/partials/events_map.html
@@ -1,9 +1,7 @@
 <!-- Leaflet CSS file -->
-<link rel="stylesheet" type="text/css" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css"
-integrity="sha256-p4NxAoJBhIIN+hmNHrzRCf9tD/miZyoHS5obTRR9BMY=" crossorigin="" />
+<link rel="stylesheet" href="/vendor/leaflet/leaflet-1.9.4.css">
 <!-- Leaflet Marker Cluster CSS files -->
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/leaflet.markercluster/1.4.1/MarkerCluster.css" />
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/leaflet.markercluster/1.5.0/MarkerCluster.Default.min.css" />
+<link rel="stylesheet" href="/vendor/leaflet/MarkerCluster-1.5.0.Default.min.css">
 
 <!-- Map -->
 {{ $events := .events }}
@@ -43,10 +41,9 @@ integrity="sha256-p4NxAoJBhIIN+hmNHrzRCf9tD/miZyoHS5obTRR9BMY=" crossorigin="" /
 </script>
 
 <!-- Leaflet JS file -->
-<script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"
-integrity="sha256-20nQCchB9co0qIjJZRGuk2/Z9VM+kNiyxNV1lvTlZBo=" crossorigin=""></script>
-<!-- Leaflet Marker Cluster JS file -->
-<script src="https://cdnjs.cloudflare.com/ajax/libs/leaflet.markercluster/1.4.1/leaflet.markercluster.js"></script>
+<script src="/vendor/leaflet/leaflet-1.9.4.js"></script>
+<script src="/vendor/leaflet/leaflet.markercluster-1.5.0.js"></script>
+
 <!-- project JS file -->
 {{ with resources.Get "js/events_map.js" }}
   {{ with . | fingerprint "sha256" }}
