Added hover styles to footer links Added color change on hover Added underline on hover Fixed issue #118

--- a/themes/django20/layouts/partials/footer.html
+++ b/themes/django20/layouts/partials/footer.html
@@ -1,31 +1,33 @@
-<div class="container">
-    <div class="footer-columns">
-        <div class="footer-column">
-            <h5>Contact</h5>
-            <p>
-                <a href="https://www.djangoproject.com/">Main Django website</a><br>
-                <a href="{{ relLangURL "add-event" }}">Add your event</a><br>
-                <a href="/#events">Find an event</a><br>
-            </p>
-            <p class="minor">
-                <a href='{{ relLangURL "about" }}'>More about the site</a><br>
-                (c) 2025 Django Software Foundation<br>
-            </p>
-        </div>
-        <div class="footer-column">
-            <a href="/" class="logo"><img src='{{ "images/pony-with-balloons.png" | relURL }}'></a>
-        </div>
-        <div class="footer-column credits">
-            <h5>Credits</h5>
-            <p>
-                Django Birthday Graphics:<br><a href="https://fosstodon.org/@sjbitcode">©Sangeeta Jadoonanan</a> (<a
-                    href="https://creativecommons.org/licenses/by-sa/4.0/">CC BY-SA 4.0</a>)<br>
-            </p>
-            <p>
-                Website: <a href="https://github.com/django/birthday20/graphs/contributors">django/birthday20
-                    contributors</a><br>
-                Got an idea? <a href="https://github.com/django/birthday20">Contribute to the website</a>.
-            </p>
+<footer>
+    <div class="container">
+        <div class="footer-columns">
+            <div class="footer-column">
+                <h5>Contact</h5>
+                <p>
+                    <a href="https://www.djangoproject.com/">Main Django website</a><br>
+                    <a href="{{ relLangURL "add-event" }}">Add your event</a><br>
+                    <a href="/#events">Find an event</a><br>
+                </p>
+                <p class="minor">
+                    <a href='{{ relLangURL "about" }}'>More about the site</a><br>
+                    (c) 2025 Django Software Foundation<br>
+                </p>
+            </div>
+            <div class="footer-column">
+                <a href="/" class="logo"><img src='{{ "images/pony-with-balloons.png" | relURL }}'></a>
+            </div>
+            <div class="footer-column credits">
+                <h5>Credits</h5>
+                <p>
+                    Django Birthday Graphics:<br><a href="https://fosstodon.org/@sjbitcode">©Sangeeta Jadoonanan</a> (<a
+                        href="https://creativecommons.org/licenses/by-sa/4.0/">CC BY-SA 4.0</a>)<br>
+                </p>
+                <p>
+                    Website: <a href="https://github.com/django/birthday20/graphs/contributors">django/birthday20
+                        contributors</a><br>
+                    Got an idea? <a href="https://github.com/django/birthday20">Contribute to the website</a>.
+                </p>
+            </div>
         </div>
     </div>
-</div>
+</footer>
